# lexnordic-migration-board

./: .env.example  .gitignore  AGENT_WORKFLOW.md  PROJECT_BRIEF.md  README.md  index.html  package-lock.json  package.json
agents/: README.md  agent_config.example.yaml  pyproject.toml  run_band_agent.py
agents/prompts/: appeal_packet.md  conflict_kyc.md  decision_parser.md  evidence.md  intake.md  legal_source.md  partner_review.md  risk.md
docs/: demo-script.md  submission-plan.md
docs/architecture/: approved-stack.md  runtime-configuration.md
docs/design/: stitch-page-pass.md  stitch-product-ui-brief.md
docs/domain/: agent-knowledge-contracts.md  eu-migration-law-secondary-source.md  knowledge-build-plan.md  migration-corpus-inventory.md  (+4 more)
server/: README.md  pyproject.toml
server/app/: __init__.py  auth.py  main.py  settings.py
server/app/clients/: __init__.py  chat_models.py  embeddings.py  model_router.py  postgres.py  qdrant.py  supabase.py
server/app/documents/: __init__.py  private_pdf.py
server/app/legal/: __init__.py  retrieval.py  source_documents.py
server/app/matters/: __init__.py  workspace.py
server/app/permits/: __init__.py  catalog.py  readiness.py
server/app/routes/: health.py  legal.py  matters.py  permits.py  sessions.py
server/database/migrations/: 001_initial_schema.sql  002_auth_sessions_rls.sql
server/scripts/: analyze_private_pdf.py  check_connections.py  eval_legal_retrieval.py  eval_matter_workspace.py  eval_permit_routes.py  ingest_legal_sources.py  setup_supabase.py
src/: App.tsx  config.ts  styles.css  types.ts
(+46 files in other folders)
